--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,20 +1,30 @@
-/* general formatting */
+body {
+	margin:0;
+	background-color: #333;
+}
 ul {
+	position: -webkit-sticky; /* Safari */
+	position: sticky;
+	top: 0;
 	list-style-type: none;
+	display: inline-block;
 	margin: 0;
 	padding: 0;
-	width: 200px;
-	background-color: #f1f1f1;
+	overflow: hidden;
+	background-color: #333;
 }
-/* normal display */
+li {
+	float: left;
+	font-family: serif;
+	font-size: 17px;
+}
 li a {
+	text-align: center;
 	display: block;
-	color: #000;
-	padding: 8px 16px;
+	color: white;
+	padding: 0.8em 1em;
 	text-decoration: none;
 }
-/* on mouse hover */
 li a:hover {
-	background-color: #555;
-	color: white;
+	color: #cccccc;
 }
