--- a/css/navbar.css
+++ b/css/navbar.css
@@ -15,7 +15,7 @@ ul {
 }
 li {
 	float: left;
-	font-family: serif;
+	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 	font-size: 17px;
 }
 li a {
