--- a/css/core.css
+++ b/css/core.css
@@ -2,18 +2,27 @@
 	margin: 0;
 }
 div.main {
-	max-width: 1300px;
+	max-width: 1000px;
 	margin: auto;
 	padding: 20px;
 	position: center;
 	background-color: #fafafa;
+}
+div.previewMain {
+	max-width: 1000px;
+	position: center;
+	padding: 0px;
+	background-color: #fafafa;
+	margin-top: -2.8em;
 }
 h1 {
 	font-family: "Segoe UI", Calibri, Candara, Segoe, Optima, Arial, sans-serif;
 	text-align: left;
 }
 p {
-	font-size: 15px;
+	padding-bottom: 0.5em;
+	text-indent: 2em;
+	font-size: 17px;
 	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 hr {
@@ -27,8 +36,11 @@ iframe {
 	width: 100%;
 	height: 2.8em;
 	font-size: 17px;
-	position: relative;
 	overflow: hidden;
 	position: fixed;
 	top: 0;
+}
+a {
+	color: black;
+	text-decoration: none;
 }
