--- a/css/core.css
+++ b/css/core.css
@@ -1,5 +1,6 @@
 * {
 	margin: 0;
+	overflow: auto;
 }
 div.main {
 	max-width: 1000px;
@@ -15,7 +16,7 @@ div.previewMain {
 	background-color: #fafafa;
 	margin-top: -2.8em;
 }
-h1 {
+h1, h2, h3, h4, h5, h6 {
 	font-family: "Segoe UI", Calibri, Candara, Segoe, Optima, Arial, sans-serif;
 	text-align: left;
 }
@@ -40,7 +41,41 @@ iframe {
 	position: fixed;
 	top: 0;
 }
-a {
-	color: black;
-	text-decoration: none;
+div.codeBlock {
+	display: inline-block;
+	background-color: #f4f4f4;
+	border-radius: 10px;
+	padding-left: 1em;
+	padding-right: 1.5em;
+}
+table {
+	margin-left: 1em;
+	padding: 0;
+}
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+}
+th, td {
+	padding: 5px;
+}
+table.files {
+	margin-top: 1em;
+	display: inline-block;
+	float: right;
+}
+div.pageImage {
+	display: inline-block;
+	float: right;
+	margin-left: 1em;
+}
+p.imageDescription {
+	text-align: center;
+	text-indent: 0;
+	padding-left: 1.5em;
+	padding-right: 1.5em;
+	font-size: 15px;
+	color: #555;
+	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
